<resources>
    <string name="app_name">WMS_SuperAdmin</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_closing_balance">Closing balance</string>
    <string name="lbl_closing_balance1">Closing Balance :</string>
    <string name="msg_cash_in_hand_3">Cash in hand 3_graph</string>
    <string name="lbl_voucher_type">Voucher type</string>
    <string name="msg_cash_in_hand_2">Cash in hand 2_graph</string>
    <string name="lbl_branch_name">Branch Name :</string>
    <string name="lbl_warehouse">Warehouse</string>
    <string name="msg_cash_in_hand1_g">Cash In Hand1_graph</string>
    <string name="msg_confirm_passwor">Confirm password</string>
    <string name="lbl_receipts">Receipts</string>
    <string name="lbl_65656">00</string>
    <string name="lbl_from_date">From date</string>
    <string name="msg_please_enter_ot">Please enter OTP that has been sent to you mobile number</string>
    <string name="lbl_app_navigation">App Navigation</string>
    <string name="lbl_enter_otp">Enter OTP</string>
    <string name="msg_arun_super_adm">Arun (Super admin)</string>
    <string name="lbl_master">Master</string>
    <string name="lbl_cashier">Cashier</string>
    <string name="lbl_1_00_000_00">\000000</string>
    <string name="lbl_otppassword">otppassword</string>
    <string name="msg_forgot_password">Forgot password?</string>
    <string name="lbl_ss_cash">SS Cash</string>
    <string name="lbl_yes_bank">Yes Bank</string>
    <string name="lbl_50_000_00">\00000</string>
    <string name="lbl_180000">0000</string>
    <string name="lbl_icici_bank"> Bank</string>
    <string name="lbl_11_3_2021">11/3/2021</string>
    <string name="lbl_date">Date</string>
    <string name="msg_total_debit_bal">Total Debit Balance </string>
    <string name="lbl_to_date">To date</string>
    <string name="lbl_to">To:</string>
    <string name="lbl_123">000</string>
    <string name="lbl_cash_in_hand4">Cash In Hand4</string>
    <string name="lbl_cash_in_hand2">Cash In Hand2</string>
    <string name="lbl_admin">Admin</string>
    <string name="lbl_cash_in_hand3">Cash In Hand3</string>
    <string name="lbl_cash_in_hand1">Cash In Hand1</string>
    <string name="lbl_newpassword2">Newpassword</string>
    <string name="lbl_wms_mobile">WMS MOBILE</string>
    <string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
    <string name="lbl_user">User</string>
    <string name="lbl_11_4_2021">11/4/2021</string>
    <string name="lbl_password">password</string>
    <string name="lbl_splashscreen">SplashScreen</string>
    <string name="lbl_newpassword">NewPassword</string>
    <string name="lbl_reports">Reports</string>
    <string name="lbl_branch3">Branch3</string>
    <string name="lbl_sbi_bank">SBI  Bank</string>
    <string name="lbl_branch1">Branch1</string>
    <string name="lbl_branch2">Branch2</string>
    <string name="lbl_gg_cash">GG Cash</string>
    <string name="lbl_account">Account</string>
    <string name="lbl_payables">Payables</string>
    <string name="lbl_inventory">Inventory</string>
    <string name="msg_total_credit_ba">Total Credit Balance </string>
    <string name="lbl_confirm">Confirm</string>
    <string name="lbl_100">100</string>
    <string name="lbl_sales">Sales</string>
    <string name="lbl_stock">Stock</string>
    <string name="lbl_w_m_s">W M S</string>
    <string name="lbl_total">Total:</string>
    <string name="lbl_today">Today</string>
    <string name="lbl_verify">Verify</string>
    <string name="lbl_opening_balance">Opening balance</string>
    <string name="lbl_opening_balance1">Opening Balance</string>
    <string name="lbl_colon">:</string>
    <string name="lbl_credit">Credit</string>
    <string name="lbl_branches">Branches</string>
    <string name="lbl_credit1">Credit :</string>
    <string name="lbl_purchase">Purchase</string>
    <string name="lbl_ak_indusrties">AK Indusrties</string>
    <string name="lbl_view_profile">View Profile</string>
    <string name="lbl">:</string>
    <string name="lbl_party">Party</string>
    <string name="lbl_all_branches2">All Branches</string>
    <string name="lbl_30_000_00">\000</string>
    <string name="msg_enternumberforg">Enternumberforgotpassword</string>
    <string name="lbl_ds_cash">DS Cash</string>
    <string name="lbl_0">0</string>
    <string name="lbl_1000_10">000</string>
    <string name="lbl_cash">Cash</string>
    <string name="msg_opening_balance">Opening Balance :</string>
    <string name="lbl_5">0</string>
    <string name="lbl_200">000</string>
    <string name="msg_dashboard_super">Dashboard_superadmin</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_receivables">Receivables</string>
    <string name="lbl_cash_in_hand">Cash In Hand</string>
    <string name="msg_your_password_h">Your password has been updated successfully</string>
    <string name="lbl_debit">Debit</string>
    <string name="lbl_debit1">Debit :</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="lbl_mobile_number">mobile number</string>
    <string name="lbl_notification">Notification</string>
    <string name="lbl_total_bal">Closing Balance</string>
    <string name="lbl_1000_00">0000.00</string>
    <string name="lbl_11_2_2021">11/2/2021</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_bank">Bank</string>
    <string name="lbl_voucher_num">Voucher Num</string>
    <string name="lbl_pk_indusrties">PK Indusrties</string>
    <string name="lbl_mobile_number2">Mobile Number</string>
    <string name="lbl_all_branches">All branches</string>
    <string name="lbl_1000">0000</string>
    <string name="lbl_total2">Total</string>
    <string name="lbl_56565">56565</string>
    <string name="lbl_remember_me">Remember me</string>
    <string name="lbl_closing_value">Closing value</string>
    <string name="lbl_sk_indusrties">SK Indusrties</string>
    <string name="lbl_updatedpassword">Updatedpassword</string>
    <string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
    <string name="msg_enter_valid_mobile_nu">Enter Valid Mobile number</string>
    <string name="msg_token_not_available">Token not available</string>
    <string name="lbl_enter_valid_otp">Enter valid OTP</string>
    <string name="msg_enter_proper_password">Enter proper password</string>
    <string name="lbl_login_failed">Login failed</string>
    <string name="lbl_21_01_2022">21–01–2022</string>
    <string name="lbl_from">From:</string>
    <string name="lbl_mwb_darwad">MWB Darwad</string>
    <string name="lbl_branch">Branch:</string>
    <string name="lbl_cash_in_bank">Cash In Bank</string>
    <string name="lbl_mwb_kundapur">MWB Kundapur</string>
    <string name="lbl_selectbranch">selectBranch</string>
    <string name="lbl_bankbook">BankBook</string>
    <string name="lbl_0_0">0.0</string>
    <string name="lbl_all">All</string>
    <string name="lbl_1_50_000">000</string>
    <string name="lbl_mwb_mysore">MWB Mysore</string>
    <string name="lbl_450000">0</string>
    <string name="lbl_bank_book">Bank Book</string>
    <string name="lbl_monthly">Monthly</string>
    <string name="msg_bills_available_n">Bills Available\n</string>
    <string name="lbl_network_error">Network Error</string>
    <string name="lbl_vocherbankbook">VoucherWiseBankBook</string>
    <string name="msg_mobile_notifica">Mobile Notification</string>
    <string name="lbl_15">15</string>
    <string name="msg_wms_notificatio">WMS Notification</string>
    <string name="lbl_10">0</string>
    <string name="lbl_dateformat">14-4-2022</string>
    <string name="lbl_vouchertype">Sales  :</string>
    <string name="msg_salesman_notifi">Salesman Notification</string>
    <string name="msg_retailer_notifi">Retailer Notification</string>
    <string name="msg_warehouse_mngr">Warehouse MNGR/SPVR</string>
    <string name="lbl_approval_status">Status</string>
    <string name="lbl_branchname">BranchName</string>
    <string name="lbl_firm_name">Firm Name</string>
    <string name="lbl_success">Success</string>
    <string name="lbl_failure">Failure</string>
    <string name="mobile_notification">Mobile Notification</string>
    <string name="wms_notification">WMS Notification</string>
    <string name="salesman_notification">Salesman Notification</string>
    <string name="retailer_notification">Retailer Notification</string>
    <string name="warehouse_mngr_spvr">Warehouse MNGR/SPVR</string>
    <string name="lbl_hubli">Hubli</string>
    <string name="lbl_sales_order">Sales Order</string>
    <string name="lbl_bill">Bill amount</string>
    <string name="lbl_Ageing">Ageing:</string>
    <string name="lbl_voucherwise">Voucherwise</string>
    <string name="lbl_monthwise">Monthwise</string>
    <string name="msg_total_voucher_c">Total Voucher count:</string>
    <string name="lbl_45">45</string>
    <string name="lbl_value">Value:</string>
    <string name="lbl_month">Month</string>
    <string name="lbl_16_05_2022">16-05-2022</string>
    <string name="lbl_one">One</string>
    <string name="lbl_new">New</string>
    <string name="lbl_abcd">abcd</string>
    <string name="lbl_55">55</string>
    <string name="lbl_detailed">Detailed</string>
    <string name="lbl_particulars">Particulars</string>
    <string name="lbl_vochertype">VocherType </string>
    <string name="lbl_vocherno">VocherNo</string>
    <string name="lbl_salestype">SalesType</string>
    <string name="lbl_value2">Value</string>
    <string name="warehouse_mngr_spvr_notification">Warehouse MNGR/SPVR notification</string>
    <string name="sales_order_report">Sales Order Report</string>
    <string name="sales_register">Sales Register</string>
    <string name="lbl_orderNo">Date|Order Number</string>
    <string name="total">Total:</string>
    <string name="msg_negative_stock">Negative Stock details</string>
    <string name="lbl_credit_days">Credit Days</string>
    <string name="lbl_approve">Approve</string>
    <string name="lbl_total_quantity">Total Quantity</string>
    <string name="lbl_change_amount">change dsct %</string>
    <string name="lbl_item_name">Item</string>
    <string name="lbl_warehouse_name">Warehouse</string>
    <string name="lbl_discount">Dscnt%</string>
    <string name="msg_sales_order_app">Sales Order Approval</string>
    <string name="lbl_mwb_dharwad">MWB Dharwad</string>
    <string name="msg_customer_credit">Customer credit details</string>
    <string name="msg_notification_ap">Notification_Approval</string>
    <string name="msg_mwb_cash_and_ca">MWB Cash and carry</string>
    <string name="msg_negative_quant">Negative Qty</string>
    <string name="msg_order_discount">Order discount details</string>
    <string name="msg_credit_limit_am">Credit limit Amount</string>
    <string name="msg_number_of_outst">Number of Outstanding bills</string>
    <string name="lbl_total_amount">Total amount</string>
    <string name="lbl_fifo_skipped">FIFO SKIPPED</string>
    <string name="msg_item_discount_d">Item discount details</string>
    <string name="lbl_17_00">17.00</string>
    <string name="lbl_17">17</string>
    <string name="lbl_13_00">13.00</string>
    <string name="msg_quantity_ordere">Qty</string>
    <string name="lbl_name2">name2</string>
    <string name="lbl_name1">name1</string>
    <string name="lbl_order_discount">Order discount</string>
    <string name="lbl_change_discount">Change discount</string>
    <string name="msg_order_number">Order Number:  0522SMU010513</string>
    <string name="lbl_9000">9000</string>
    <string name="lbl_10000">10000</string>
    <string name="lbl_sales_register">Sales Register</string>
    <string name="lbl_net_sales">Net Sales</string>
    <string name="lbl_may">May</string>
    <string name="msg_old_credit_limi">Old Credit limit Amount</string>
</resources>