<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="bankbook1RowModel" type="com.wms.superadmin.modules.bankbook.data.model.Bankbook1RowModel"/>
    </data>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearGroup"
        android:elevation="@dimen/_5pxh"
        android:layout_margin="@dimen/_5pxh">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@color/deep_orange_100_ab"
            android:padding="@dimen/_5pxh"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{bankbook1RowModel.BranchName}"
                android:textSize="@dimen/_17pxh"
                style="@style/txtRobotoboldbank"
                tools:text="@string/lbl_mwb_darwad"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_13pxh"
                    style="@style/txtRobotoregularbank"
                    android:text="@string/msg_opening_balance"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5pxh"
                    android:textSize="@dimen/_13pxh"
                    android:text="@{bankbook1RowModel.OpeningBalance}"
                    style="@style/txtRobotoregularbank"
                    tools:text="@string/lbl_5"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_13pxh"
                    style="@style/txtRobotoregularbank"
                    android:text="@string/lbl_debit1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_13pxh"
                    android:layout_marginStart="@dimen/_9pxh"
                    android:text="@{bankbook1RowModel.debit}"
                    style="@style/txtRobotoregularbank"
                    tools:text="@string/lbl_5"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_13pxh"
                    style="@style/txtRobotoregularbank"
                    android:text="@string/lbl_credit1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5pxh"
                    android:textSize="@dimen/_13pxh"
                    android:text="@{bankbook1RowModel.credit}"
                    style="@style/txtRobotoregularbank"
                    tools:text="@string/lbl_5"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_13pxh"
                    style="@style/txtRobotoregularbank"
                    android:text="@string/lbl_closing_balance1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_13pxh"
                    android:layout_marginStart="@dimen/_5pxh"
                    android:text="@{bankbook1RowModel.closingBal}"
                    style="@style/txtRobotoregularbank"
                    tools:text="@string/lbl_5"/>
            </LinearLayout>

        </LinearLayout>



    </com.google.android.material.card.MaterialCardView>

</layout>