<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="vocherbankbook1RowModel" type="com.wms.superadmin.modules.vocherbankbook.data.model.Vocherbankbook1RowModel"/>
    </data>

    <LinearLayout android:id="@+id/linearGroup"
        android:layout_height="wrap_content"
        android:weightSum="6"
        android:layout_width="match_parent"
       android:paddingTop="@dimen/_10pxh"
       android:paddingBottom="@dimen/_10pxh"
        android:orientation="horizontal"
        style="@style/groupStyledeep_orange_50">
        <TextView android:gravity="center|start"
            android:id="@+id/txtDate"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_5pxh"
            android:layout_width="0dp"
            android:text="@{vocherbankbook1RowModel.LedgerDate}"
            style="@style/txtRobotoregularbank" tools:text="@string/lbl_mwb_darwad"/>
        <TextView
            android:gravity="center"
            android:id="@+id/txtOpeningBalance"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@{vocherbankbook1RowModel.Party}"
            style="@style/txtRobotoboldbank" tools:text="@string/lbl_1_50_000"/>
        <TextView android:gravity="center"
            android:id="@+id/txtDebit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@{vocherbankbook1RowModel.vocherType}"
            style="@style/txtRobotoboldbank" tools:text="@string/lbl_0_0"/>
        <TextView android:gravity="center"
            android:id="@+id/txtCredit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@{vocherbankbook1RowModel.vocherTypeNo}"
            style="@style/txtRobotoboldbank" tools:text="@string/lbl_0_0"/>
        <TextView android:gravity="center"
            android:id="@+id/ClosingBal"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@{vocherbankbook1RowModel.debit}"
            style="@style/txtRobotoboldbank" tools:text="@string/lbl_1_50_000"/>
        <TextView android:gravity="center"
            android:id="@+id/credit"
            android:layout_height="match_parent"
            android:layout_weight="1" android:layout_width="0dp"
            android:text="@{vocherbankbook1RowModel.credit}"
            style="@style/txtRobotoboldbank" tools:text="@string/lbl_1_50_000"/>
    </LinearLayout>
</layout>
